--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,13 +1,20 @@
 .header {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 79.27px;
+  max-width: 100%;
+  height: 7.741vh;
   border-bottom: 1px solid black;
   justify-content: space-between;
+  margin: 1.953vh 4.861vw 0
+}
+.header-btns {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 493px) {
   .header {
     max-width: 100%;
   }
