--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,7 +1,7 @@
 .header__logo {
     width: 53.27px;
     height: 22.66px;
-    margin: 3.027vh 0 2.441vh 4.931vw
+    margin: 3.027vh 0 2.441vh 0
 }
 @media screen and (max-width: 375px) {
     .header__logo {
