--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     box-sizing: border-box;
-    width: 35%;
+    width: 230px;
     height: 45%;
     min-height: 320px;
     min-width: 230px;
