--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,17 +1,20 @@
 .header {
   display: flex;
   align-items: center;
-  max-width: 100%;
+  min-width: 375px;
   height: 7.741vh;
   border-bottom: 1px solid black;
   justify-content: space-between;
-  padding: 1.953vh 4.861vw 0
+  padding: 1.953vh 4.861vw 0;
+  margin-right: 10px;
+  
 }
 .header-btns {
   display: flex;
-  max-width: 100%;
+  width: 200px;
   align-items: center;
   justify-content: flex-end;
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 493px) {
