the page and header sizes have been changed. code refactoring

--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -1,6 +1,5 @@
 .content {
-    max-width: 95%;
-    margin: 0 auto;
-    padding-top: 25px;
+    margin: 0 auto 0 8.8194vw;
     min-width: 375px;
+    padding: 9.5214vh 4.861vw 0;
 }
