--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,8 +5,7 @@
   height: 7.741vh;
   border-bottom: 1px solid black;
   justify-content: space-between;
-  padding: 1.953vh 4.861vw 0;
-  margin-right: 10px;
+  padding: 0 4.861vw 0;
   
 }
 .header-btns {
