fixed styles of main-title

--- a/src/blocks/content/main-title.css
+++ b/src/blocks/content/main-title.css
@@ -10,6 +10,7 @@
     line-height: 80px;
     letter-spacing: 0.2px;
     color: #252B42;
+    margin-bottom: 3.418vh;
      /* width: 50.486vw;
     height: 15.625vh;  */
 }
