--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -1,9 +1,8 @@
 .elements {
-    max-width: 880px;
     margin: 0;
     display: grid;
     grid-template-columns: repeat(3, 328px);
-    padding-top: 35px;
+    padding-top: 9.4238vh;
     gap: 30px;
 }
 @media screen and (max-width: 1180px) {
