--- a/src/blocks/profile/__exit-btn/profile__exit-btn.css
+++ b/src/blocks/profile/__exit-btn/profile__exit-btn.css
@@ -4,9 +4,8 @@
     height: 52px;
     align-items: center;
     color: #FFFFFF;
-    font-style: 'Montserrat';
-    font-weight: normal;
-    font-size: 14px;
+    font-weight: 700;
+    font-size: 15px;
     line-height: 22px;
     letter-spacing: 0.2px;
     transition: .3s opacity;
