--- a/src/blocks/content/main-contacts-btn.css
+++ b/src/blocks/content/main-contacts-btn.css
@@ -3,13 +3,14 @@
     width: 155px;
     height: 52px;
     align-items: center;
+    grid-gap: 10px;
     gap: 10px;
     color: #FF685B;
-    font-style: 'Montserrat';
+    font-family: sans-serif;
     font-weight: normal;
     font-size: 14px;
     line-height: 22px;
-    letter-spacing: 0.2px;
+    letter-spacing: 1.4px;
     opacity: 1;
     transition: .3s opacity;
     border-radius: 5px;
