--- a/src/blocks/element/__title/element__title.css
+++ b/src/blocks/element/__title/element__title.css
@@ -7,7 +7,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #252B42;
-    text-overflow: ellipsis;
     white-space: nowrap;
-    border-bottom: 2px solid #E74040;
+    /* border-bottom: 2px solid #E74040; */
+    letter-spacing: 1.33px;
 }
