--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -5,6 +5,7 @@
     padding-top: 9.4238vh;
     gap: 30px;
 }
+/* padding-top: 10.48vh; */
 @media screen and (max-width: 1180px) {
     .elements {
         max-width: 600px;
