--- a/src/blocks/header/header-login-btn.css
+++ b/src/blocks/header/header-login-btn.css
@@ -6,11 +6,11 @@
     border-radius: 7px;
     cursor: pointer;
     color: #FF685B;
-    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
+    letter-spacing: 1.4px;
     align-items: center;
     text-align: center;
     opacity: 1;
