--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -1,13 +1,12 @@
 .profile__title {
     width: 727px;
-    height: 71px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 58px;
+    font-size: 69px;
     line-height: 80px;
     letter-spacing: 0.2px;
-    color: #252B42;
+    margin-bottom: 2.5vh;
 }
 
 @media screen and (max-width: 440px) {
