--- a/src/blocks/content/contacts.css
+++ b/src/blocks/content/contacts.css
@@ -1,11 +1,11 @@
 .contacts {
     width: 727px;
     height: 71px;
-    font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 700;
-    font-size: 58px;
+    font-weight: 900;
+    font-size: 31px;
     line-height: 80px;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.5px;
     color: #252B42;
+    margin-top: 20.8vh;
 }
