fixed some styles for the mobile version

--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -5,6 +5,7 @@
 }
 @media screen and (max-width: 500px) {
     .content {
-        padding: 9.5214vh 2.66vw 0;
+        padding: 4.6vh 2.7vw 0;
+        margin: 0;
     }
 }
