--- a/src/blocks/header/header-login-btn.css
+++ b/src/blocks/header/header-login-btn.css
@@ -21,9 +21,8 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 200px) {
+@media screen and (max-width: 420px) {
     .header-login-btn {
-        font-size: 14px;
-        line-height: 17px;
+        max-width: 106px;
     }
 }
